--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
 </head>
 
 <body class="bg-black container mx-auto max-w-7xl">
-  <div class="flex justify-center items-center h-screen w-full">
-    <canvas class="bg-white border-2" id="canvas" width="600" height="600"></canvas>
+  <div class="flex justify-center items-center h-screen w-screen">
+    <canvas class="" id="canvas" width="600" height="600"></canvas>
+    <select id="playerState">
+      <option value="idle">Idle</option>
+      <option value="jump">Jump</option>
+      <option value="fall">Fall</option>
+      <option value="run">Run</option>
+      <option value="dizzy">Dizzy</option>
+      <option value="sit">Sit</option>
+      <option value="roll">Roll</option>
+      <option value="bite">Bite</option>
+      <option value="ko">Ko</option>
+      <option value="getHit">Get Hit</option>
+    </select>
   </div>
   <script type="module" src="/src/main.js"></script>
 </body>
