--- a/index.html
+++ b/index.html
@@ -9,22 +9,11 @@
 </head>
 
 <body class="bg-black container mx-auto max-w-7xl">
-  <div class="flex justify-center items-center h-screen w-screen">
-    <canvas class="" id="canvas" width="600" height="600"></canvas>
-    <select id="playerState">
-      <option value="idle">Idle</option>
-      <option value="jump">Jump</option>
-      <option value="fall">Fall</option>
-      <option value="run">Run</option>
-      <option value="dizzy">Dizzy</option>
-      <option value="sit">Sit</option>
-      <option value="roll">Roll</option>
-      <option value="bite">Bite</option>
-      <option value="ko">Ko</option>
-      <option value="getHit">Get Hit</option>
-    </select>
-  </div>
-  <script type="module" src="/src/main.js"></script>
+  <div class="flex flex-col justify-center items-center h-screen w-screen">
+    <canvas class="" id="canvas" width="800" height="700"></canvas>
+    <p class="font-bold text-white">Game speed</p>
+    <input type="range" min="1" max="10" value="5" class="slider" id="gameSpeed">
+    <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
